// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconBase renders an accessible label when the label prop has a value 1`] = `
<svg
  aria-hidden="false"
  aria-label="Hello, world"
  fill="currentColor"
  height={18}
  preserveAspectRatio="xMidYMid meet"
  role="img"
  style={
    Object {
      "verticalAlign": "middle",
    }
  }
  viewBox="0 0 24 24"
  width={18}
>
  <g>
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
    />
  </g>
</svg>
`;

exports[`IconBase renders children correctly 1`] = `
<svg
  aria-hidden="true"
  fill="currentColor"
  height={18}
  preserveAspectRatio="xMidYMid meet"
  style={
    Object {
      "verticalAlign": "middle",
    }
  }
  viewBox="0 0 24 24"
  width={18}
>
  <g>
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
    />
  </g>
</svg>
`;

exports[`createExtendedSvgIcon creates an extended Icon correctly 1`] = `
<IconBase
  size={18}
  viewBox="0 0 100 100"
>
  <path
    d="a path"
  />
  <text
    fill="white"
    fontSize="24"
    stroke="black"
    x="22"
    y="62"
  >
    test text
  </text>
</IconBase>
`;

exports[`createSvgIcon creates an Icon correctly 1`] = `
<IconBase
  size={18}
>
  <path
    d="a path"
  />
</IconBase>
`;
